# rust-axum-todo

./: .env  Cargo.toml  compose.yaml  diesel.toml
migrations/2025-08-21-110002_initial_tables/: up.sql
src/: main.rs
src/db/: migration.rs  mod.rs  models.rs  schema.rs
src/handlers/todo/: create.rs  delete.rs  get.rs  list.rs  mod.rs  models.rs  partial_update.rs  update.rs
src/service/: todo.rs
