[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
diesel = {version="2.2.11", features=["mysql", "r2d2"]}
diesel_migrations = {version="2.2.0", features=["mysql"]}
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = {version ="1.45.1", features =["full"]}
